--- a/src/components/menu-bar/menu-bar.css
+++ b/src/components/menu-bar/menu-bar.css
@@ -77,7 +77,7 @@
     height: $menu-bar-height;
 }
 
-.jpyc-button {
+.ethereum-button {
     box-shadow: 0 0 0 1px $ui-black-transparent;
     cursor: pointer;
 }
@@ -86,7 +86,7 @@
     cursor: pointer;
 }
 
-.jpyc-button:hover,
+.ethereum-button:hover,
 .menu-bar-item.active,
 .menu-bar-item.hoverable:hover {
     background-color: $ui-black-transparent;
